<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/root"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.ozantok.ecommerce.ui.common.ECommerceToolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        app:titleTextAppearance="@style/TextAppearance.Material3.TitleMedium"
        app:title="@string/app_name"
        app:showBack="true"
        />

    <LinearLayout
        android:id="@+id/contentGroup"
        android:visibility="gone"
        android:orientation="vertical"
        android:padding="16dp"
        android:layout_marginTop="40dp"
        android:paddingBottom="72dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="220dp"
            android:layout_marginTop="12dp">

            <ImageView
                android:id="@+id/image"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="centerCrop"
                android:contentDescription="@string/app_name"
                android:background="#E0E0E0"/>

            <ImageView
                android:id="@+id/favoriteBtn"
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:layout_gravity="end|top"
                android:layout_margin="8dp"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:src="@drawable/icon_star_unselected"/>
        </FrameLayout>

        <TextView
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/montserrat_bold"
            android:textSize="20sp"
            android:textColor="@color/black"
            android:maxLines="2"
            android:ellipsize="end"/>

        <TextView
            android:id="@+id/desc"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:fontFamily="@font/montserrat_regular"
            android:textSize="14sp"
            android:textColor="@color/black"
            android:layout_marginTop="8dp"
            android:lineSpacingExtra="2dp"/>

        <LinearLayout
            android:id="@+id/bottomBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:paddingTop="8dp"
            android:paddingBottom="8dp">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/priceLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/montserrat_regular"
                    android:text="Price:"
                    android:textSize="18sp"
                    android:textColor="@color/main"/>

                <TextView
                    android:id="@+id/price"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="18sp"
                    android:fontFamily="@font/montserrat_bold"
                    />
            </LinearLayout>

            <TextView
                android:id="@+id/addToCartButton"
                style="@style/AppButton"
                android:textSize="18sp"
                android:fontFamily="@font/montserrat_bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/add_to_cart"/>
        </LinearLayout>

    </LinearLayout>

    <ProgressBar
        android:id="@+id/progress"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_gravity="center"/>

    <LinearLayout
        android:id="@+id/errorGroup"
        android:orientation="vertical"
        android:gravity="center"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="16dp">

        <TextView
            android:id="@+id/errorText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/error"/>
    </LinearLayout>

</FrameLayout>
